# SmallProjectGL

./: .gitignore  CMakeLists.txt  README.md  build.sh  deskWorn_OBJ.rar  imgui.ini  main.cpp  trees.obj.txt
data/shaders/: bloom.json  debug.json  depth.json  directional_light.json  gaussian_blur.json  light_debug.json  pbr.json  pbr_a.json  pbr_aao.json  pbr_am.json  pbr_an.json  pbr_anao.json  pbr_anm.json  pbr_anr.json  (+27 more)
glsl/: bloom_pixel.glsl  bloom_vertex.glsl  cook_torrance_notext_pixel.glsl  cook_torrance_notext_vertex.glsl  cook_torrance_old_text_pixel.glsl  cook_torrance_old_text_vertex.glsl  cook_torrance_text_pixel.glsl  cook_torrance_text_vertex.glsl  cook_torrance_vertex.glsl  debug_pixel.glsl  debug_vertex.glsl  deferred_rendering_pixel.glsl  deferred_rendering_vertex.glsl  depth_pixel.glsl  directional_light_pixel.glsl  fragment.glsl  gaussian_blur_pixel.glsl  lambert_notext_vertex.glsl  lambert_text_pixel.glsl  lambert_text_vertex.glsl  lambert_vertex.glsl  light_debug_pixel.glsl  pbr_pixel.glsl  pbr_vertex.glsl  phong_light_notext_pixel.glsl  phong_notext_pixel.glsl  phong_notext_vertex.glsl  phong_old_text_pixel.glsl  phong_old_text_vertex.glsl  phong_pixel.glsl  phong_text_pixel.glsl  phong_text_vertex.glsl  phong_vertex.glsl  point_light_pixel.glsl  point_light_vertex.glsl  post_process_pixel.glsl  post_process_vertex.glsl  quad_pixel.glsl  quad_vertex.glsl  skybox_pixel.glsl  (+9 more)
include/: buffers.h  camera.h  console.h  engine.h  framebuffers.h  geometry.h  inputSystem.h  light.h  material.h  mesh.h  renderer.h  resourceManager.h  shaderProgram.h  skybox.h  system_gui.h  texture.h  transform.h  window.h
src/: buffers.cpp  camera.cpp  console.cpp  engine.cpp  framebuffers.cpp  geometry.cpp  inputSystem.cpp  light.cpp  main.cpp  material.cpp  mesh.cpp  renderer.cpp  shaderProgram.cpp  skybox.cpp  system_gui.cpp  texture.cpp  transform.cpp  window.cpp
(+5 files in other folders)
